--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>RANDOMI GO</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./css/style.css'>
 </head>
 <body>
     <style> body { margin: 0px; } </style>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html>
