--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>RANDOMI GO</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/style.css'>
-    <script type="importmap">
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/style.css'>
+    <!-- <script type="importmap">
         {
           "imports": {
             "three": "https://cdn.jsdelivr.net/npm/three@v0.149.0/build/three.module.js",
             "three/addons/": "https://cdn.jsdelivr.net/npm/three@v0.149.0/examples/jsm/"
           }
         }
-      </script>
+      </script> -->
 </head>
 <body>
     <style> body { margin: 0px; } </style>
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="/js/main.js"></script>
 </body>
 </html>
