--- a/frontend/src/register.html
+++ b/frontend/src/register.html
@@ -5,8 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Register</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/style.css'>
-    <script src='./js/auth.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/style.css'>
+    <script src='/js/auth.js'></script>
 </head>
 <body>
     <section>
