--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,6 +6,7 @@
     <title>RANDOMI GO</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/ui.css'>
     <!-- <script type="importmap">
         {
           "imports": {
@@ -16,7 +17,21 @@
       </script> -->
 </head>
 <body>
-    <style> body { margin: 0px; } </style>
-    <script type="module" src="/js/main.js"></script>
+  <style> body { margin: 0px; } </style>
+  <script type="module" src="/js/main.js"></script>
+
+  <div id="ui">
+      <section class="connection">
+        <p>Status: <span id="connection-status">Not connected</span></p>
+        <p>Authenticated: <span id="auth-status">Fail</span></p>
+      </section>
+      <section class="chat">
+        <div id="log"></div>
+        <form id="chatform" style="pointer-events: none;">
+          <input type="text" id="text" autocomplete="off" />
+          <input type="submit" id="send" />
+        </form>
+      </section>
+  </div>
 </body>
 </html>
