--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -6,16 +6,31 @@
     <title>Login</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/style.css'>
-    <script src='/js/auth.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/menu.css'>
+    <script type="module" src='/js/auth.js'></script>
+    <style>
+        .form {
+            /* display: flex; */
+            /* flex-direction: column; */
+            margin-inline: 1em;
+        }
+    </style>
 </head>
 <body>
-    <section>
-        <h5>Login</h5>
-        <label for="username-input">Username:</label>
-        <input id="username-input" type="text" value=""/>
-        <label for="password-input">Password:</label>
-        <input id="password-input" type="password" name="Password" value=""/>
-        <input type="submit" value="Login" onclick="login_submit()"/>
+  <div class="root">
+    <section class="vlayout center space-evenly">
+        <div class="styled"><h1>Login</h1></div>
+        <section class="styled">
+            <div class="vlayout form">
+                <label for="username-input">Username:</label>
+                <input id="username-input" type="text" value="" required="required"/>
+                <label for="password-input">Password:</label>
+                <input id="password-input" type="password" name="Password" value="" required="required"/>
+                <p style="font-size: medium;">No account yet ? <a href="/register.html">Create an account</a></p>
+                <button id="form-submit" class="styled" onclick="login_submit()"><span>Login</span></button>
+            </div>
+        </section>
     </section>
+  </div>
 </body>
 </html>
