--- a/frontend/src/register.html
+++ b/frontend/src/register.html
@@ -6,18 +6,33 @@
     <title>Register</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/style.css'>
-    <script src='/js/auth.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/menu.css'>
+    <script type="module" src='/js/auth.js'></script>
+    <style>
+        .form {
+            /* display: flex; */
+            /* flex-direction: column; */
+            margin-inline: 1em;
+        }
+    </style>
 </head>
 <body>
-    <section>
-        <h5>Register</h5>
-        <label for="username-input">Username:</label>
-        <input id="username-input" type="text" name="Username" value=""/>
-        <label for="email-input">Email:</label>
-        <input id="email-input" type="email" name="Email" value=""/>
-        <label for="password-input">Password:</label>
-        <input id="password-input" type="password" name="Password" value=""/>
-        <input type="submit" value="Register" onclick="register_submit()"/>
-    </section>
+    <div class="root">
+        <section class="vlayout center space-evenly">
+            <div class="styled"><h1>Register</h1></div>
+            <section class="styled">
+                <div class="vlayout form">
+                    <label for="username-input">Username:</label>
+                    <input id="username-input" type="text" name="Username" value="" required="required"/>
+                    <label for="email-input">Email:</label>
+                    <input id="email-input" type="email" name="Email" value="" required="required"/>
+                    <label for="password-input">Password:</label>
+                    <input id="password-input" type="password" name="Password" value="" required="required"/>
+                    <p style="font-size: medium;">Already have an account ? <a href="/login.html">Log in</a></p>
+                    <button id="form-submit" class="styled" onclick="register_submit()"><span>Create Account</span></button>
+                </div>
+            </section>
+        </section>
+    </div>
 </body>
 </html>
