--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -12,7 +12,7 @@
     
     <link rel='stylesheet' type='text/css' media='screen' href='/css/style.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/menu.css'>
-    <script type="module" src='/js/auth.js'></script>
+    <script type="module" src='/js/api/auth.js'></script>
     <style>
         .form {
             /* display: flex; */
