--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -23,15 +23,15 @@
   <script type="module" src="/js/menus/mainmenu.js"></script>
   <div class="root">
     <div id="main" class="view">
-      <div class="vlayout center">
+      <div class="vlayout stretch center">
         <div class="styled"><h1>Main</h1></div>
 
         <div class="hlayout center">
           <button class="styled" id="to-create-lobby"><span>
-            <h1>Create Lobby</h1>
+            <h2>Create Lobby</h2>
           </span></button>
           <button class="styled" id="to-join-lobby"><span>
-            <h1>Join Lobby</h1>
+            <h2>Join Lobby</h2>
           </span></button>
         </div>
       </div>
@@ -40,6 +40,14 @@
     <div id="create-lobby" class="view">
       <section>
         <div class="styled"><h1>Create Lobby</h1></div>
+        <section class="styled vlayout" style="padding: 1.5em;">
+          <div>
+            <label for="lobby-password-input">Password:</label>
+            <input id="lobby-password-input" type="text"/>
+            <input id="lobby-private-check" class="lock" type="checkbox"/>
+          </div>
+          <button class="styled" id="create-lobby-validate-button"><span>Create</span></button>
+        </section>
         <button class="styled" id="create-lobby-back-button"><span>Back</span></button>
       </section>
     </div>
@@ -47,13 +55,7 @@
     <div id="select-lobby" class="view">
       <section class="vlayout">
         <div class="styled"><h2>Select Lobby</h2></div>
-        <!-- <div id="lobby-list"></div> -->
         <lobby-list id="lobby-list" style="height: 40vh; margin-bottom: 24px;"></lobby-list>
-        <div class="hlayout" style="position: absolute;">
-          <button class="styled" id="test-add-lobby"><span>Add</span></button>
-          <button class="styled" id="test-remove-lobby"><span>Remove</span></button>
-          <button class="styled" id="test-clear-list"><span>Clear</span></button>
-        </div>
         <button class="styled" id="select-lobby-back-button"><span>Back</span></button>
       </section>
     </div>
