--- a/frontend/src/example-menu.html
+++ b/frontend/src/example-menu.html
@@ -12,6 +12,7 @@
     
     <link rel='stylesheet' type='text/css' media='screen' href='/css/style.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/menu.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/popup.css'>
 </head>
 <body>
   <script type="module" src="/js/menus/example-menu.js"></script>
