--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -12,6 +12,7 @@
 
     <link rel='stylesheet' type='text/css' media='screen' href='/css/style.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/menu.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/popup.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/lobby.css'>
     <style>
         /* remove scrolling */
