--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -12,6 +12,7 @@
     
     <link rel='stylesheet' type='text/css' media='screen' href='/css/style.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/menu.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/popup.css'>
     <script type="module" src='/js/api/auth.js'></script>
     <style>
         .form {
