Animation simple carte vers l'avant quand jouée

--- a/frontend/src/ingame.html
+++ b/frontend/src/ingame.html
@@ -45,6 +45,7 @@
       </section>
       <section class="clickable" style="position: absolute; top: 40px;">
         <button id="simulate-game-update">Simulate Game Update</button>
+        <button id="test-set-card-pos">Test Set Card Pos</button>
       </section>
       <section class="clickable" style="position: absolute; top: 60px;">
         <button id="simulate-play-card">Simulate Play Card</button>
