Ajout/modif de plusieurs GameEvents

--- a/frontend/src/ingame.html
+++ b/frontend/src/ingame.html
@@ -53,6 +53,9 @@
         <button id="simulate-play-card-dice">Simulate Play Card With Dice</button>
         <button id="simulate-play-card-dice-opponent">Simulate Play Card With Dice Opponent</button>
       </section>
+      <section style="position: absolute; top: 80px;">
+        <p>Events: <span id="event-counter">0</span></p>
+      </section>
 
       <section class="chat">
         <div id="log"></div>
