--- a/frontend/src/ingame.html
+++ b/frontend/src/ingame.html
@@ -13,6 +13,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='/css/style.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/popup.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/ui.css'>
+    <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
     <!-- <script type="importmap">
         {
           "imports": {
@@ -37,23 +38,7 @@
       </section>
 
       <!-- test -->
-      <section class="clickable" style="position: absolute; top: 20px;">
-        <button id="simulate-current-turn">Simulate Recv Current Turn</button>
-        <button id="simulate-opponent-turn">Simulate Recv Opponent Turn</button>
-        <button id="simulate-draw-card">Simulate Draw Card</button>
-        <button id="simulate-draw-card-opponent">Simulate Draw Card Opponent</button>
-      </section>
-      <section class="clickable" style="position: absolute; top: 40px;">
-        <button id="simulate-game-update">Simulate Game Update</button>
-        <button id="test-set-card-pos">Test Set Card Pos</button>
-      </section>
-      <section class="clickable" style="position: absolute; top: 60px;">
-        <button id="simulate-play-card">Simulate Play Card</button>
-        <button id="simulate-play-card-opponent">Simulate Play Card Opponent</button>
-        <button id="simulate-play-card-dice">Simulate Play Card With Dice</button>
-        <button id="simulate-play-card-dice-opponent">Simulate Play Card With Dice Opponent</button>
-      </section>
-      <section style="position: absolute; top: 80px;">
+      <section style="position: absolute; top: 24px;">
         <p>Events: <span id="event-counter">0</span></p>
       </section>
 
