--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -14,7 +14,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='/css/menu.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/popup.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/lobby.css'>
-    <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <style>
         /* remove scrolling */
         html, body {
