--- a/frontend/src/ingame.html
+++ b/frontend/src/ingame.html
@@ -13,7 +13,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='/css/style.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/popup.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/ui.css'>
-    <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <!-- <script type="importmap">
         {
           "imports": {
