--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -13,6 +13,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='/css/style.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/menu.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/popup.css'>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <script type="module" src='/js/api/auth.js'></script>
     <style>
         .form {
