Ajout variantes de cartes

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -56,7 +56,7 @@
         <section class="styled vlayout" style="padding: 1.5em;">
           <div>
             <label for="lobby-password-input">Password:</label>
-            <input id="lobby-password-input" type="password"/>
+            <input id="lobby-password-input" type="password" maxlength="9"/>
             <input id="lobby-private-check" class="lock" type="checkbox"/>
           </div>
           <button class="styled" id="create-lobby-validate-button"><span>Create</span></button>
