--- a/frontend/src/example-menu.html
+++ b/frontend/src/example-menu.html
@@ -14,6 +14,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='/css/menu.css'>
 </head>
 <body>
+  <div id="particles-menu-container" style="position:fixed;top:0;left:0;width:100vw;height:100vh;z-index:0;"></div>
   <script type="module" src="/js/menus/example-menu.js"></script>
   <div class="root">
     <div id="view1" class="view">
