Ajout pages pour les routes dans front

--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -34,6 +34,7 @@
                 <label for="password-input">Password:</label>
                 <input id="password-input" type="password" name="Password" value="" required="required"/>
                 <p style="font-size: medium;">No account yet ? <a href="/register.html">Create an account</a></p>
+                <a href="/forgot-password.html" style="font-size: medium;">Forgot your password ?</a>
                 <button id="form-submit" class="styled" onclick="login_submit()"><span>Login</span></button>
             </div>
         </section>
