--- a/frontend/src/register.html
+++ b/frontend/src/register.html
@@ -35,6 +35,8 @@
                     <input id="email-input" type="email" name="Email" value="" required="required"/>
                     <label for="password-input">Password:</label>
                     <input id="password-input" type="password" name="Password" value="" required="required"/>
+                    <label for="confirm-password-input">Confirm Password:</label>
+                    <input id="confirm-password-input" type="password" name="Confirm Password" value="" required="required"/>
                     <p style="font-size: medium;">Already have an account ? <a href="/login.html">Log in</a></p>
                     <button id="form-submit" class="styled" onclick="register_submit()"><span>Create Account</span></button>
                 </div>
