--- a/frontend/src/ingame.html
+++ b/frontend/src/ingame.html
@@ -42,6 +42,10 @@
         <p>Events: <span id="event-counter">0</span></p>
       </section>
 
+      <div style="position: absolute; top: 0px; left: 0px; width: 100vw; display: flex; justify-content: center;">
+        <span id="turn-timer"></span>
+      </div>
+
       <section class="chat">
         <div id="log"></div>
         <form id="chatform">
