Labels de statut à la place d'une popup quand on veut s'enregistrer / se connecter

--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -30,9 +30,10 @@
         <section class="styled">
             <div class="vlayout form">
                 <label for="username-input">Username:</label>
-                <input id="username-input" type="text" value="" required="required"/>
+                <input id="username-input" type="text" value="" required="required" maxlength="32"/>
                 <label for="password-input">Password:</label>
-                <input id="password-input" type="password" name="Password" value="" required="required"/>
+                <input id="password-input" type="password" name="Password" value="" required="required" maxlength="255"/>
+                <span id="input-status" style="color: red; font-size: medium;"></span>
                 <p style="font-size: medium;">No account yet ? <a href="/register.html">Create an account</a></p>
                 <a href="/forgot-password.html" style="font-size: medium;">Forgot your password ?</a>
                 <button id="form-submit" class="styled" onclick="login_submit()"><span>Login</span></button>
