--- a/frontend/src/reset-password.html
+++ b/frontend/src/reset-password.html
@@ -36,9 +36,9 @@
             <section class="styled">
                 <div class="vlayout form">
                     <label for="password-input">New Password:</label>
-                    <input id="password-input" type="password" name="New Password" value="" required="required"/>
+                    <input id="password-input" type="password" name="New Password" value="" required="required" maxlength="255"/>
                     <label for="confirm-password-input">Confirm Password:</label>
-                    <input id="confirm-password-input" type="password" name="Confirm Password" value="" required="required"/>
+                    <input id="confirm-password-input" type="password" name="Confirm Password" value="" required="required" maxlength="255"/>
                     <span id="input-status" style="color: red; font-size: medium;"></span>
                     <button id="form-submit" class="styled" onclick="reset_password_submit()"><span>Submit</span></button>
                 </div>
