--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -21,6 +21,8 @@
             overflow: hidden;
         }
     </style>
+    <!-- Font Awesome Icon Kit -->
+    <script src="https://kit.fontawesome.com/b588752ce8.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <script type="module" src="/js/menus/main-menu.js"></script>
@@ -47,7 +49,10 @@
           <div id="create-lobby-form">
             <label for="lobby-unlisted-check">Unlisted: </label>
             <input id="lobby-unlisted-check" type="checkbox"/>
-            <!-- TODO add hint icon -->
+            <p class="tooltip" style="align-self: flex-end;">
+              <i class="fas fa-question-circle"></i>
+              <span class="tooltiptext">Users can only join this lobby using the lobby code</span>
+            </p>
           </div>
           <button class="styled" id="create-lobby-validate-button"><span>Create</span></button>
         </section>
