Affichage du profile lorsqu'on clique sur le nom d'un ami

--- a/frontend/src/example-menu.html
+++ b/frontend/src/example-menu.html
@@ -13,6 +13,10 @@
     <link rel='stylesheet' type='text/css' media='screen' href='/css/style.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/menu.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/popup.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/profile.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/friends.css'>
+    <!-- Font Awesome Icon Kit -->
+    <script src="https://kit.fontawesome.com/b588752ce8.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <script type="module" src="/js/menus/example-menu.js"></script>
