--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -99,5 +99,9 @@
     <div id="profile-panel-backdrop" class="panel-backdrop"></div>
     <profile-panel id="profile-panel"></profile-panel>
 
+    <!-- Other Profile panel -->
+     <div id="other-profile-panel-backdrop" class="panel-backdrop"></div>
+     <other-profile-panel id="other-profile-panel"></other-profile-panel>
+
   </body>
 </html>
